fixed issue where blank bottom space covers textbox on android firefox address bar autohide

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 html {
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
+
 body {
   height: 100%;
   width: 100%;
-  position: fixed;
   background-color: lavenderblush;
     /* background: url('img\pexels-sergey-chetvertnykh-880639.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -20,8 +20,17 @@ body {
     }
   }
 
+.textbox-mobile {
+  position: absolute;
+}
+
 #godown{
   height: 60px;
+}
+
+.fixed-mobile {
+  position: absolute;
+  bottom: 0;
 }
 
 @media only screen and (max-width: 799px) {
